--- a/renderer.html
+++ b/renderer.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <script>
+  document.currentScript.parentNode.removeChild(document.currentScript)
+
   fetch(window.location.search.substring(1))
     .then(response => {
        return response.text()
     })
     .then(body => {
-      document.body.innerHTML = body
-      
-      for(var i = 1; i <= document.scripts.length; i++) {
-        eval(document.scripts[i].innerHTML)      
-      }
+      document.body.innerHTML = body;
+      [].forEach.call( document.scripts, script => {
+        eval(script.innerText)
+      })
     })
 </script>
